--- a/Wins/MainWin.xaml
+++ b/Wins/MainWin.xaml
@@ -347,8 +347,7 @@
                     </Binding>
                 </Button.ToolTip>
             </Button>
-            <Button x:Name="AboutButton"
-                    Grid.Column="2" Margin="5" Content="{Binding Source={x:Static consts:MainConst.AboutButtonContent}}" ToolTip="{Binding Source={x:Static consts:MainConst.AboutButtonToolTip}}"
+            <Button Grid.Column="2" Margin="5" Content="{Binding Source={x:Static consts:MainConst.AboutButtonContent}}" ToolTip="{Binding Source={x:Static consts:MainConst.AboutButtonToolTip}}"
                     Click="AboutButton_Click" />
         </Grid>
     </Grid>
