--- a/App.xaml
+++ b/App.xaml
@@ -11,6 +11,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style x:Key="CommonWindow" TargetType="{x:Type Window}">
+                <Setter Property="AutomationProperties.Name" Value="Sheas Cealer" />
                 <Setter Property="Background" Value="{DynamicResource MaterialDesignPaper}" />
                 <Setter Property="Foreground" Value="{DynamicResource MaterialDesignBody}" />
             </Style>
