--- a/Wins/AboutWin.xaml
+++ b/Wins/AboutWin.xaml
@@ -23,13 +23,13 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" d:Foreground="#2196F3"
+        <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" d:Foreground="{x:Static consts:AboutConst.AccentBlueColor}"
                 Foreground="{Binding AccentForegroundColor, Converter={x:Static convs:AboutConv.AboutAccentButtonForegroundConv}}"
                 Content="{x:Static consts:AboutConst.DeveloperButtonContent}"
                 ToolTip="{x:Static consts:AboutConst.DeveloperButtonUrl}"
                 Click="AboutButton_Click" />
         <Button x:Name="VersionButton"
-                Grid.Row="1" Grid.Column="0" Margin="5" d:Foreground="#2196F3" d:Content="# # #: #.#.#"
+                Grid.Row="1" Grid.Column="0" Margin="5" d:Foreground="{x:Static consts:AboutConst.AccentBlueColor}" d:Content="# # #: #.#.#"
                 Foreground="{Binding AccentForegroundColor, Converter={x:Static convs:AboutConv.AboutAccentButtonForegroundConv}}"
                 ToolTip="{x:Static consts:AboutConst.VersionButtonUrl}"
                 Click="AboutButton_Click">
