--- a/Wins/AboutWin.xaml
+++ b/Wins/AboutWin.xaml
@@ -29,8 +29,7 @@
                 Content="{x:Static consts:AboutConst.DeveloperButtonContent}"
                 ToolTip="{x:Static consts:AboutConst.DeveloperButtonUrl}"
                 Click="AboutButton_Click" />
-        <Button x:Name="VersionButton"
-                Grid.Row="1" Grid.Column="0" Margin="5" d:Content="# # #: #.#.#"
+        <Button Grid.Row="1" Grid.Column="0" Margin="5" d:Content="# # #: #.#.#"
                 d:Foreground="{Binding Source={x:Static consts:AboutConst.AccentBlueColor}, Converter={x:Static convs:AboutConv.AboutAccentButtonForegroundConv}}"
                 Foreground="{Binding AccentForegroundColor, Converter={x:Static convs:AboutConv.AboutAccentButtonForegroundConv}}"
                 ToolTip="{x:Static consts:AboutConst.VersionButtonUrl}"
